<resources>
    <string name="app_name">Bizcard</string>
    <string name="contact_address">No 2, Olojuede street.</string>
    <string name="contact_telephone">08139260647</string>
    <string name="contact_email">boscotec.inc@gmail.com</string>
    <string name="contact_hours">We are open, Mon - Fri 8am to 6pm </string>
    <string name="contact_slogan">BoscoTEC... turn your ideas to reality.</string>
    <string name="contact_us">Contact us:</string>
    <string name="company_name">BoscoTEC</string>
    <string name="company_logo">logo</string>
</resources>
